crates/kreuzberg-ffi/include/kreuzberg.h

typedef struct KREUZBERGChunkingConfig KREUZBERGChunkingConfig;
typedef struct KREUZBERGDocumentStructure KREUZBERGDocumentStructure;
typedef struct KREUZBERGEmbeddingConfig KREUZBERGEmbeddingConfig;
typedef struct KREUZBERGHierarchyConfig KREUZBERGHierarchyConfig;
typedef struct KREUZBERGHtmlMetadata KREUZBERGHtmlMetadata;
typedef struct KREUZBERGHtmlOutputConfig KREUZBERGHtmlOutputConfig;
typedef struct KREUZBERGImagePreprocessingConfig KREUZBERGImagePreprocessingConfig;
typedef struct KREUZBERGKeywordConfig KREUZBERGKeywordConfig;
typedef struct KREUZBERGLayoutDetectionConfig KREUZBERGLayoutDetectionConfig;
typedef struct KREUZBERGOcrConfig KREUZBERGOcrConfig;
typedef struct KREUZBERGOcrQualityThresholds KREUZBERGOcrQualityThresholds;
typedef struct KREUZBERGPaddleOcrConfig KREUZBERGPaddleOcrConfig;
typedef struct KREUZBERGPageConfig KREUZBERGPageConfig;
typedef struct KREUZBERGPdfConfig KREUZBERGPdfConfig;
typedef struct KREUZBERGPostProcessorConfig KREUZBERGPostProcessorConfig;
typedef struct KREUZBERGRakeParams KREUZBERGRakeParams;
typedef struct KREUZBERGServerConfig KREUZBERGServerConfig;
typedef struct KREUZBERGTessdataManager KREUZBERGTessdataManager;
typedef struct KREUZBERGTesseractConfig KREUZBERGTesseractConfig;
typedef struct KREUZBERGTokenReductionConfig KREUZBERGTokenReductionConfig;
typedef struct KREUZBERGTreeSitterConfig KREUZBERGTreeSitterConfig;
typedef struct KREUZBERGTreeSitterProcessConfig KREUZBERGTreeSitterProcessConfig;
typedef struct KREUZBERGYakeParams KREUZBERGYakeParams;
typedef struct KREUZBERGKreuzbergOcrBackendVTable {
  void (*name_fn)(const void *user_data,
                  char **out_name);
  void (*version_fn)(const void *user_data,
                     char **out_version);
  int32_t (*initialize_fn)(const void *user_data,
                           char **out_error);
  int32_t (*shutdown_fn)(const void *user_data,
                         char **out_error);
  int32_t (*process_image)(const void *user_data,
                           const uint8_t *image_bytes,
                           const char *config,
                           char **out_result,
                           char **out_error);
  int32_t (*process_image_file)(const void *user_data,
                                const char *path,
                                const char *config,
                                char **out_result,
                                char **out_error);
  int32_t (*supports_language)(const void *user_data,
                               const char *lang);
  int32_t (*backend_type)(const void *user_data,
                          char **out_result);
  int32_t (*supported_languages)(const void *user_data,
                                 char **out_result);
  int32_t (*supports_table_detection)(const void *user_data);
  int32_t (*supports_document_processing)(const void *user_data);
  int32_t (*process_document)(const void *user_data,
                              const char *_path,
                              const char *_config,
                              char **out_result,
                              char **out_error);
  void (*free_user_data)(void*);
} KREUZBERGKreuzbergOcrBackendVTable;
typedef struct KREUZBERGKreuzbergPostProcessorVTable {
  void (*name_fn)(const void *user_data,
                  char **out_name);
  void (*version_fn)(const void *user_data,
                     char **out_version);
  int32_t (*initialize_fn)(const void *user_data,
                           char **out_error);
  int32_t (*shutdown_fn)(const void *user_data,
                         char **out_error);
  int32_t (*process)(const void *user_data,
                     const char *result,
                     const char *config,
                     char **out_error);
  int32_t (*processing_stage)(const void *user_data,
                              char **out_result);
  int32_t (*should_process)(const void *user_data,
                            const char *_result,
                            const char *_config);
  uint64_t (*estimated_duration_ms)(const void *user_data,
                                    const char *_result);
  void (*free_user_data)(void*);
} KREUZBERGKreuzbergPostProcessorVTable;
typedef struct KREUZBERGKreuzbergValidatorVTable {
  void (*name_fn)(const void *user_data,
                  char **out_name);
  void (*version_fn)(const void *user_data,
                     char **out_version);
  int32_t (*initialize_fn)(const void *user_data,
                           char **out_error);
  int32_t (*shutdown_fn)(const void *user_data,
                         char **out_error);
  int32_t (*validate)(const void *user_data,
                      const char *result,
                      const char *config,
                      char **out_error);
  int32_t (*should_validate)(const void *user_data,
                             const char *_result,
                             const char *_config);
  int32_t (*priority)(const void *user_data);
  void (*free_user_data)(void*);
} KREUZBERGKreuzbergValidatorVTable;
typedef struct KREUZBERGKreuzbergEmbeddingBackendVTable {
  void (*name_fn)(const void *user_data,
                  char **out_name);
  void (*version_fn)(const void *user_data,
                     char **out_version);
  int32_t (*initialize_fn)(const void *user_data,
                           char **out_error);
  int32_t (*shutdown_fn)(const void *user_data,
                         char **out_error);
  uintptr_t (*dimensions)(const void *user_data);
  int32_t (*embed)(const void *user_data,
                   const char *texts,
                   char **out_result,
                   char **out_error);
  void (*free_user_data)(void*);
} KREUZBERGKreuzbergEmbeddingBackendVTable;
int32_t kreuzberg_last_error_code(void);
const char *kreuzberg_last_error_context(void);
void kreuzberg_free_string(char *ptr);
KREUZBERGHtmlOutputConfig *kreuzberg_html_output_config_default(void);
KREUZBERGLayoutDetectionConfig *kreuzberg_layout_detection_config_default(void);
KREUZBERGOcrQualityThresholds *kreuzberg_ocr_quality_thresholds_default(void);
KREUZBERGOcrConfig *kreuzberg_ocr_config_default(void);
KREUZBERGPageConfig *kreuzberg_page_config_default(void);
KREUZBERGPdfConfig *kreuzberg_pdf_config_default(void);
KREUZBERGHierarchyConfig *kreuzberg_hierarchy_config_default(void);
KREUZBERGPostProcessorConfig *kreuzberg_post_processor_config_default(void);
KREUZBERGChunkingConfig *kreuzberg_chunking_config_default(void);
KREUZBERGEmbeddingConfig *kreuzberg_embedding_config_default(void);
KREUZBERGTreeSitterConfig *kreuzberg_tree_sitter_config_default(void);
KREUZBERGTreeSitterProcessConfig *kreuzberg_tree_sitter_process_config_default(void);
KREUZBERGServerConfig *kreuzberg_server_config_default(void);
char *kreuzberg_server_config_listen_addr(const KREUZBERGServerConfig *this_);
int32_t kreuzberg_server_config_cors_allows_all(const KREUZBERGServerConfig *this_);
int32_t kreuzberg_server_config_is_origin_allowed(const KREUZBERGServerConfig *this_,
                                                  const char *origin);
uintptr_t kreuzberg_server_config_max_request_body_mb(const KREUZBERGServerConfig *this_);
uintptr_t kreuzberg_server_config_max_multipart_field_mb(const KREUZBERGServerConfig *this_);
KREUZBERGTokenReductionConfig *kreuzberg_token_reduction_config_default(void);
KREUZBERGDocumentStructure *kreuzberg_document_structure_default(void);
KREUZBERGImagePreprocessingConfig *kreuzberg_image_preprocessing_config_default(void);
KREUZBERGTesseractConfig *kreuzberg_tesseract_config_default(void);
KREUZBERGHtmlMetadata *kreuzberg_html_metadata_from(const KREUZBERGHtmlMetadata *metadata);
KREUZBERGYakeParams *kreuzberg_yake_params_default(void);
KREUZBERGRakeParams *kreuzberg_rake_params_default(void);
KREUZBERGKeywordConfig *kreuzberg_keyword_config_default(void);
char *kreuzberg_tessdata_manager_cache_dir(const KREUZBERGTessdataManager *this_);
int32_t kreuzberg_tessdata_manager_is_language_cached(const KREUZBERGTessdataManager *this_,
                                                      const char *lang);
uintptr_t kreuzberg_tessdata_manager_ensure_all_languages(const KREUZBERGTessdataManager *this_);
KREUZBERGPaddleOcrConfig *kreuzberg_paddle_ocr_config_with_cache_dir(KREUZBERGPaddleOcrConfig *this_,
                                                                     const char *path);
KREUZBERGPaddleOcrConfig *kreuzberg_paddle_ocr_config_with_table_detection(KREUZBERGPaddleOcrConfig *this_,
                                                                           int32_t enable);
KREUZBERGPaddleOcrConfig *kreuzberg_paddle_ocr_config_with_angle_cls(KREUZBERGPaddleOcrConfig *this_,
                                                                     int32_t enable);
KREUZBERGPaddleOcrConfig *kreuzberg_paddle_ocr_config_with_det_db_thresh(KREUZBERGPaddleOcrConfig *this_,
                                                                         float threshold);
KREUZBERGPaddleOcrConfig *kreuzberg_paddle_ocr_config_with_det_db_box_thresh(KREUZBERGPaddleOcrConfig *this_,
                                                                             float threshold);
KREUZBERGPaddleOcrConfig *kreuzberg_paddle_ocr_config_with_det_db_unclip_ratio(KREUZBERGPaddleOcrConfig *this_,
                                                                               float ratio);
KREUZBERGPaddleOcrConfig *kreuzberg_paddle_ocr_config_with_det_limit_side_len(KREUZBERGPaddleOcrConfig *this_,
                                                                              uint32_t length);
KREUZBERGPaddleOcrConfig *kreuzberg_paddle_ocr_config_with_rec_batch_num(KREUZBERGPaddleOcrConfig *this_,
                                                                         uint32_t batch_size);
KREUZBERGPaddleOcrConfig *kreuzberg_paddle_ocr_config_with_drop_score(KREUZBERGPaddleOcrConfig *this_,
                                                                      float score);
KREUZBERGPaddleOcrConfig *kreuzberg_paddle_ocr_config_with_padding(KREUZBERGPaddleOcrConfig *this_,
                                                                   uint32_t padding);
KREUZBERGPaddleOcrConfig *kreuzberg_paddle_ocr_config_with_model_tier(KREUZBERGPaddleOcrConfig *this_,
                                                                      const char *tier);
KREUZBERGPaddleOcrConfig *kreuzberg_paddle_ocr_config_default(void);
int32_t kreuzberg_register_ocr_backend(const char *name,
                                       struct KREUZBERGKreuzbergOcrBackendVTable vtable,
                                       const void *user_data,
                                       char **out_error);
int32_t kreuzberg_unregister_ocr_backend(const char *name,
                                         char **out_error);
int32_t kreuzberg_register_post_processor(const char *name,
                                          struct KREUZBERGKreuzbergPostProcessorVTable vtable,
                                          const void *user_data,
                                          char **out_error);
int32_t kreuzberg_unregister_post_processor(const char *name,
                                            char **out_error);
int32_t kreuzberg_register_validator(const char *name,
                                     struct KREUZBERGKreuzbergValidatorVTable vtable,
                                     const void *user_data,
                                     char **out_error);
int32_t kreuzberg_unregister_validator(const char *name,
                                       char **out_error);
int32_t kreuzberg_register_embedding_backend(const char *name,
                                             struct KREUZBERGKreuzbergEmbeddingBackendVTable vtable,
                                             const void *user_data,
                                             char **out_error);
int32_t kreuzberg_unregister_embedding_backend(const char *name,
                                               char **out_error);