packages/csharp/src/Kreuzberg/NativeMethods.cs


    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_html_output_config_default")]
    internal static extern IntPtr HtmlOutputConfigDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_layout_detection_config_default")]
    internal static extern IntPtr LayoutDetectionConfigDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_ocr_quality_thresholds_default")]
    internal static extern IntPtr OcrQualityThresholdsDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_ocr_config_default")]
    internal static extern IntPtr OcrConfigDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_page_config_default")]
    internal static extern IntPtr PageConfigDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_pdf_config_default")]
    internal static extern IntPtr PdfConfigDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_hierarchy_config_default")]
    internal static extern IntPtr HierarchyConfigDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_post_processor_config_default")]
    internal static extern IntPtr PostProcessorConfigDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_chunking_config_default")]
    internal static extern IntPtr ChunkingConfigDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_embedding_config_default")]
    internal static extern IntPtr EmbeddingConfigDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_tree_sitter_config_default")]
    internal static extern IntPtr TreeSitterConfigDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_tree_sitter_process_config_default")]
    internal static extern IntPtr TreeSitterProcessConfigDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_server_config_default")]
    internal static extern IntPtr ServerConfigDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_server_config_listen_addr")]
    internal static extern IntPtr ServerConfigListenAddr(
        IntPtr handle
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_server_config_cors_allows_all")]
    internal static extern int ServerConfigCorsAllowsAll(
        IntPtr handle
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_server_config_is_origin_allowed")]
    internal static extern int ServerConfigIsOriginAllowed(
        IntPtr handle,
        [MarshalAs(UnmanagedType.LPStr)] string origin
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_server_config_max_request_body_mb")]
    internal static extern ulong ServerConfigMaxRequestBodyMb(
        IntPtr handle
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_server_config_max_multipart_field_mb")]
    internal static extern ulong ServerConfigMaxMultipartFieldMb(
        IntPtr handle
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_token_reduction_config_default")]
    internal static extern IntPtr TokenReductionConfigDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_document_structure_default")]
    internal static extern IntPtr DocumentStructureDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_image_preprocessing_config_default")]
    internal static extern IntPtr ImagePreprocessingConfigDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_tesseract_config_default")]
    internal static extern IntPtr TesseractConfigDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_html_metadata_from")]
    internal static extern IntPtr HtmlMetadataFrom(
        IntPtr metadata
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_yake_params_default")]
    internal static extern IntPtr YakeParamsDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_rake_params_default")]
    internal static extern IntPtr RakeParamsDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_keyword_config_default")]
    internal static extern IntPtr KeywordConfigDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_tessdata_manager_cache_dir")]
    internal static extern IntPtr TessdataManagerCacheDir(
        IntPtr handle
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_tessdata_manager_is_language_cached")]
    internal static extern int TessdataManagerIsLanguageCached(
        IntPtr handle,
        [MarshalAs(UnmanagedType.LPStr)] string lang
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_tessdata_manager_ensure_all_languages")]
    internal static extern ulong TessdataManagerEnsureAllLanguages(
        IntPtr handle
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_paddle_ocr_config_with_cache_dir")]
    internal static extern IntPtr PaddleOcrConfigWithCacheDir(
        IntPtr handle,
        [MarshalAs(UnmanagedType.LPStr)] string path
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_paddle_ocr_config_with_table_detection")]
    internal static extern IntPtr PaddleOcrConfigWithTableDetection(
        IntPtr handle,
        int enable
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_paddle_ocr_config_with_angle_cls")]
    internal static extern IntPtr PaddleOcrConfigWithAngleCls(
        IntPtr handle,
        int enable
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_paddle_ocr_config_with_det_db_thresh")]
    internal static extern IntPtr PaddleOcrConfigWithDetDbThresh(
        IntPtr handle,
        float threshold
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_paddle_ocr_config_with_det_db_box_thresh")]
    internal static extern IntPtr PaddleOcrConfigWithDetDbBoxThresh(
        IntPtr handle,
        float threshold
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_paddle_ocr_config_with_det_db_unclip_ratio")]
    internal static extern IntPtr PaddleOcrConfigWithDetDbUnclipRatio(
        IntPtr handle,
        float ratio
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_paddle_ocr_config_with_det_limit_side_len")]
    internal static extern IntPtr PaddleOcrConfigWithDetLimitSideLen(
        IntPtr handle,
        uint length
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_paddle_ocr_config_with_rec_batch_num")]
    internal static extern IntPtr PaddleOcrConfigWithRecBatchNum(
        IntPtr handle,
        uint batchSize
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_paddle_ocr_config_with_drop_score")]
    internal static extern IntPtr PaddleOcrConfigWithDropScore(
        IntPtr handle,
        float score
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_paddle_ocr_config_with_padding")]
    internal static extern IntPtr PaddleOcrConfigWithPadding(
        IntPtr handle,
        uint padding
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_paddle_ocr_config_with_model_tier")]
    internal static extern IntPtr PaddleOcrConfigWithModelTier(
        IntPtr handle,
        [MarshalAs(UnmanagedType.LPStr)] string tier
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_paddle_ocr_config_default")]
    internal static extern IntPtr PaddleOcrConfigDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_last_error_code")]
    internal static extern int LastErrorCode();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_last_error_context")]
    internal static extern IntPtr LastErrorContext();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_free_string")]
    internal static extern void FreeString(IntPtr ptr);


    // Trait Bridge FFI

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_register_ocr_backend")]
    internal static extern int RegisterOcrBackend([MarshalAs(UnmanagedType.LPUTF8Str)] string name, IntPtr vtable, IntPtr userData, out IntPtr outError);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_unregister_ocr_backend")]
    internal static extern int UnregisterOcrBackend([MarshalAs(UnmanagedType.LPUTF8Str)] string name, out IntPtr outError);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_register_post_processor")]
    internal static extern int RegisterPostProcessor([MarshalAs(UnmanagedType.LPUTF8Str)] string name, IntPtr vtable, IntPtr userData, out IntPtr outError);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_unregister_post_processor")]
    internal static extern int UnregisterPostProcessor([MarshalAs(UnmanagedType.LPUTF8Str)] string name, out IntPtr outError);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_register_validator")]
    internal static extern int RegisterValidator([MarshalAs(UnmanagedType.LPUTF8Str)] string name, IntPtr vtable, IntPtr userData, out IntPtr outError);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_unregister_validator")]
    internal static extern int UnregisterValidator([MarshalAs(UnmanagedType.LPUTF8Str)] string name, out IntPtr outError);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_register_embedding_backend")]
    internal static extern int RegisterEmbeddingBackend([MarshalAs(UnmanagedType.LPUTF8Str)] string name, IntPtr vtable, IntPtr userData, out IntPtr outError);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_unregister_embedding_backend")]
    internal static extern int UnregisterEmbeddingBackend([MarshalAs(UnmanagedType.LPUTF8Str)] string name, out IntPtr outError);
}
